improve all structure 1
add firebase and connect with database and create some endpoints

--- a/nodeserver/package.json
+++ b/nodeserver/package.json
@@ -15,6 +15,7 @@
     "posttest": "npm run lint",
     "lint": "tslint -p .",
     "start": "node ./dist/index.js",
+    "tsc": "tsc -w",
     "gcp-build": "tsc -p .",
     "deploy": "gcloud app deploy"
   },
