last commit on 14/11
12:19 15/11/2021

--- a/nodeserver/tsconfig.json
+++ b/nodeserver/tsconfig.json
@@ -8,9 +8,12 @@
     "esModuleInterop": true,
   },
   "include": [
-    "*.ts"
+    "*.ts",
+    "src/*.ts",
+    "index.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.spec.ts"
   ]
 }
