--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,9 @@ bin-release/
 *.air
 *.ipa
 *.apk
-
+.vscode\settings.json
+nodeserver\.vscode\settings.json
+nuestratribu\.vscode\settings.json
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
