--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ bin-release/
 .vscode\settings.json
 nodeserver\.vscode\settings.json
 nuestratribu\.vscode\settings.json
+firebasehosting/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
