--- a/nodeserver/package.json
+++ b/nodeserver/package.json
@@ -17,22 +17,22 @@
     "start": "node ./dist/index.js",
     "tsc": "tsc -w",
     "gcp-build": "tsc -p .",
-    "deploy": "gcloud app deploy"
+    "deploy": "gcloud app deploy",
+    "watch:debug": "nodemon --inspect=5858 -e ts,tsx --exec node -r ts-node/register ./index.ts"
   },
   "dependencies": {
-    "@types/mongodb": "^4.0.7",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^14.14.7",
+    "body-parser": "^1.19.0",
     "express": "^4.16.3",
     "firebase": "^9.4.1",
-    "firebase-admin": "^10.0.0",
-    "mongoose": "^6.0.12"
+    "firebase-admin": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^16.11.7",
     "chai": "^4.2.0",
     "mocha": "^9.0.0",
-    "nodemon": "^2.0.14",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
     "tslint": "^6.0.0",
     "typescript": "^4.4.4",
     "wait-port": "^0.2.7"
